# service_rust

./: .env  Cargo.toml
src/: graphql.rs  kafka.rs  lib.rs  main.rs  models.rs  schema.rs
src/persistence/: mod.rs  models.rs  repository.rs
