[package]
name = "service_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-graphql = { version = "4.0.16", features = ["dataloader"] }
async-graphql-actix-web = "4.0.16"
actix-web = "4.2.1"
actix-rt = "2.7.0"
actix-web-actors = "4.1.0"
futures = "0.3.25"
async-trait = "0.1.58"
bigdecimal = { version = "0.3.0", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "numeric", "chrono"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
strum = "0.24.1"
strum_macros = "0.24.3"

async-stream = "0.3.3"
lazy_static = "1.4.0"
chrono = "0.4.23"

[dev-dependencies]
jsonpath_lib = "0.3.0"
testcontainers = "0.14.0"